@@ -13,6 +13,7 @@ Version 0.90
     more accurate log(double)
     changes to relational operators for double types ( return type matches input vectors length )
     changes to select ( handling of double types )
+    new reciprocal and native_reciprocal functions ( calculating 1/x )
 
 Version 0.87
     IL kernel link bug fix
